# wor

./: .flake8  .gitattributes  .gitignore  db.sqlite3  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/: asgi.py  settings.py  urls.py
templates/admin/: base_site.html
wor/: admin.py  apps.py  constant.py  forms.py  models.py  urls.py  views.py
wor/migrations/: 0001_initial.py  0002_alter_chestplate_set_name_alter_weapon_set_name.py  0002_amulet_user_chestplate_user_ring_user_weapon_user_and_more.py  0002_heroclass_name.py  0003_alter_amulet_user_alter_chestplate_user_and_more.py  0003_rename_classe_character_heroclass_and_more.py  0004_alter_pantheon_atk_bonus_alter_pantheon_atk_spd_and_more.py  0004_primaryattributes_secondaryattributes_and_more.py  0005_character_artifact.py  0005_character_faction.py  0006_amulet_chestplate_ring_weapon_wristband_and_more.py  0006_remove_character_artifact_artifact_character.py  0007_alter_chestplate_set_name_alter_weapon_set_name.py  0007_remove_character_amulet_remove_character_chestplate_and_more.py  0008_amulet_set_name_ring_set_name_wristband_set_name.py  0008_remove_amulet_character_and_more.py  0009_rename_magic_resistance_character_mres.py  0009_weapon_equiped_character.py  0010_amulet_equiped_character_and_more.py  0010_character_crit_dmg.py  0011_alter_amulet_equiped_character_and_more.py  0011_character_attack_speed.py  0012_remove_chestplate_equiped_character_and_more.py  0013_remove_amulet_equiped_character_and_more.py  0014_remove_character_weapon_remove_weapon_eqp_character_and_more.py  0015_remove_character_amulet_remove_character_chestplate_and_more.py  0016_alter_artifact_character.py  0017_collection.py  0018_remove_collection_hp_collection_hp200_and_more.py  0019_rename_ragen_regen_atked_collection_rage_regen_atked_and_more.py  0020_alter_collection_faction.py  0021_remove_collection_atk50_remove_collection_hp200_and_more.py  0022_character_rage_regen_character_rage_regen_atked_and_more.py
wor/static/wor/: add_form.css  collection_form.css  compare.css  detail.css  show_equipment.css  style.css
wor/templates/wor/: base.html  results.html
wor/templates/wor/delete/: del_amulet.html  del_artifact.html  del_chestplate.html  del_ring.html  del_weapon.html  del_wristband.html
wor/templates/wor/detail/: amulet_detail.html  character_detail.html  chestplate_detail.html  ring_detail.html  weapon_detail.html  wristband_detail.html
wor/templates/wor/form/: amulet_form.html  artifact_form.html  character_form.html  chestplate_form.html  collection_form.html  compare_equipment_form.html  pantheon_form.html  ring_form.html  weapon_form.html  wristband_form.html
wor/templates/wor/registration/: login.html  signup.html
wor/templates/wor/show/: amulets.html  artifacts.html  characters.html  chestplates.html  collections.html  pantheon.html  rings.html  weapons.html  wristbands.html
